# wasm-utils

./: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
native/: Cargo.toml  Makefile.toml  docker-compose.yml  entrypoint.sh
native/src/: lib.rs
scripts/: bump-version.ts  postbuild.ts  utils.ts
src/: index.ts  version.ts
test/: compression.test.ts  crc32c.test.ts
