[package]
  authors = ["Platformatic <info@platformatic.dev>"]
  edition = "2024"
  name    = "platformatic-kafka"
  version = "0.1.0"

[lib]
  crate-type = ["cdylib"]

[dependencies]
  crc32c   = "0.6.8"
  lz4_flex = "0.12.0"
  snap     = "1.1.1"

[profile.release]
  opt-level     = 3
  lto           = "fat"
  codegen-units = 1
  panic         = "abort"
  strip         = true
